tests/rosetta/transpiler/CS/almkvist-giullera-formula-for-pi.error
dotnet run: exit status 1
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(156,21): error CS0136: A local or parameter named 'idx' cannot be declared in this scope because that name is used in an enclosing local scope to define a local or parameter [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(191,20): error CS0019: Operator '+' cannot be applied to operands of type 'int[]' and 'int[]' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(231,20): error CS0019: Operator '+' cannot be applied to operands of type 'int[]' and 'int[]' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(236,29): error CS0019: Operator '+' cannot be applied to operands of type 'int[]' and 'int[]' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(308,34): error CS1061: 'Dictionary<string, int>' does not contain a definition for 'get' and no accessible extension method 'get' accepting a first argument of type 'Dictionary<string, int>' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(317,18): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.KeyValuePair<string, int>' to 'string' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(317,31): error CS1061: 'Dictionary<string, int>' does not contain a definition for 'get' and no accessible extension method 'get' accepting a first argument of type 'Dictionary<string, int>' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(317,53): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.KeyValuePair<string, int>' to 'string' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(319,27): error CS1061: 'Dictionary<string, int>' does not contain a definition for 'get' and no accessible extension method 'get' accepting a first argument of type 'Dictionary<string, int>' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(323,18): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.KeyValuePair<string, int>' to 'string' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(323,31): error CS1061: 'Dictionary<string, int>' does not contain a definition for 'get' and no accessible extension method 'get' accepting a first argument of type 'Dictionary<string, int>' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(323,49): error CS1503: Argument 1: cannot convert from 'System.Collections.Generic.KeyValuePair<string, int>' to 'string' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(325,27): error CS1061: 'Dictionary<string, int>' does not contain a definition for 'get' and no accessible extension method 'get' accepting a first argument of type 'Dictionary<string, int>' could be found (are you missing a using directive or an assembly reference?) [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(346,20): error CS0136: A local or parameter named 'frac' cannot be declared in this scope because that name is used in an enclosing local scope to define a local or parameter [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]
/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/Program.cs(390,32): error CS0023: Operator '-' cannot be applied to operand of type 'string' [/tmp/TestCSTranspiler_Rosetta_Golden628548988/001/app.csproj]

The build failed. Fix the build errors and run again.
